AYPA-46 added item model